Fixed spacing on logged in slider

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -618,7 +618,7 @@ footer > div > div > div.footer-container-right {
 }
 
 .landing-carousel {
-    margin-top: 11vh;
+    margin-top: 13vh;
 }
 
 /********************************/
